--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -25,10 +25,10 @@
 
 <body class="ms-font-m ms-welcome ms-Fabric">
     <input type="file" id="myFile" name="filename" accept=".json"><br><br>
-    
     <button id="show" type="submit">Show fields</button><br><br>
     <div id="cb"></div><br><br>
-    <button id="run" type="submit">Manipulate selected fields</button>
+    <button id="run" type="submit">Manipulate Data Fields</button>
+    <button type="submit" id="ai"> Generate Names using AI
 
     
 
