--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -24,10 +24,11 @@
 </head>
 
 <body class="ms-font-m ms-welcome ms-Fabric">
-    <input type="file" id="myFile" name="filename" accept=".json"><br><br>
+    <input type="file" id="myFile" name="filename"><br><br>
+    
     <button id="show" type="submit">Show fields</button><br><br>
     <div id="cb"></div><br><br>
-    <button id="run" type="submit">Manipulate Data Fields</button>
+    <button id="run" type="submit">Manipulate Data</button>
     <button type="submit" id="ai"> Generate Names using AI
 
     
