--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -13,6 +13,7 @@
     <!-- Office JavaScript API -->
     <script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-md5/2.18.0/js/md5.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.2/xlsx.full.min.js"></script>
 
@@ -27,8 +28,8 @@
 <body class="ms-font-m ms-welcome ms-Fabric">
     <input type="file" id="myFile" name="filename"><br><br>
     
-    <button id="show" type="submit">Clear</button><br><br>
     <div id="cb"></div><br><br>
+    <button id="show" type="submit">Clear</button><br><br>
     <button id="run" type="submit">Manipulate Data</button>
     <button type="submit" id="ai"> Generate Names using AI
 
