--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Contoso Task Pane Add-in</title>
+    <title>Data Sanitize Task Pane Add-in</title>
 
     <!-- Office JavaScript API -->
     <script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></script>
@@ -24,14 +24,11 @@
 
 <body class="ms-font-m ms-welcome ms-Fabric">
     <input type="file" id="myFile" name="filename"><br><br>
-    
+
     <div id="cb"></div><br><br>
     <button id="show" type="submit">Clear</button><br><br>
-    <button id="run" type="submit">Manipulate Data</button>
-    <button type="submit" id="ai"> Generate Names using AI
-
-    
-
+    <button id="run" type="submit">Manipulate Data</button><br><br>
+    <button type="submit" id="ai"> Generate Names using AI</button>
 </body>
 
 </html>
