--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -25,9 +25,9 @@
 <body class="ms-font-m ms-welcome ms-Fabric">
     <input type="file" id="myFile" name="filename"><br><br>
     <div id="cb"></div><br><br>
-    <button id="show" type="submit">Clear</button><br><br>
+    <button id="clear" type="submit">Clear</button><br><br>
     <button id="run" type="submit">Manipulate Data</button><br><br>
-    <button type="submit" id="ai"> Generate Names using AI</button><br><br>
+    <button type="submit" id="ai"> Generate Data using AI</button><br><br>
 
     <input id="exportToXML" type="radio" value="exportToXM" name="group1">Export To XML</input>
     <input id="exportToJSON" type="radio" value="exportToJSON" name="group1">Export To JSON</input>
